--- a/src/AOC/AOC.fsproj
+++ b/src/AOC/AOC.fsproj
@@ -10,4 +10,8 @@
     <Compile Include="Misc.fs" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FParsec" Version="1.1.1" />
+  </ItemGroup>
+
 </Project>
